@@ -1188,11 +1188,12 @@ def membership_options(mlist, subcat, cgidata, doc, form):
                 continue
             start = chunkmembers[i*chunksz]
             end = chunkmembers[min((i+1)*chunksz, last)-1]
-            url = url + 'chunk=%d' % i + findfrag
-            if isinstance(url, unicode):
-                url = url.encode(Utils.GetCharSet(mlist.preferred_language),
+            thisurl = url + 'chunk=%d' % i + findfrag
+            if isinstance(thisurl, unicode):
+                thisurl = thisurl.encode(
+                                 Utils.GetCharSet(mlist.preferred_language),
                                  errors='ignore')
-            link = Link(url, _('from %(start)s to %(end)s'))
+            link = Link(thisurl, _('from %(start)s to %(end)s'))
             buttons.append(link)
         buttons = UnorderedList(*buttons)
         container.AddItem(footer + buttons.Format() + '<p>')
