@@ -23,6 +23,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - Fixed a bug which created incorrect "view more members" links at the
+      bottom of the admin Membership List pages.  (LP: #1637061)
+
     - The 2.1.23 fix for LP: #1604544 only fixed the letter links at the top
       of the Membership List.  The links at the bottom have now been fixed.
 
